[package]
name = "nt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
dirs = "5.0.1"
duct = "0.13.7"
json = "0.12.4"
regex = "1.10.3"
serde = "1.0.197"
serde_json = "1.0.114"
walkdir = "2.5.0"
